--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-server-express": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql-resolvers": "^0.4.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mysql": "^2.14.1",
