--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Servidor nodejs-graphql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/app.js",
+    "test": "nodemon --exec babel-node src/app.js",
     "build": "babel src/ --out-dir build",
-    "serve": "node build/app.js"
+    "start": "npm run build && node ./build/app.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +32,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-es2015": "^6.24.1",
     "nodemon": "^2.0.4"
   }
